# WWMGuitarBot

./: Cargo.toml  INSTALL.md  ReadMe.md  build.rs  shell.nix
.cargo/: config.toml
src/: main.rs
