[package]
name = "chinge_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
scrap = { version = "0.5" }
enigo = "0.2"

# Alternative crates für bessere cross-platform support:
# screenshots = "0.10"  # Alternative zu scrap mit weniger dependencies
# inputbot = "0.5"      # Alternative zu enigo

[build-dependencies]
pkg-config = "0.3"
