[package]
name = "chinge_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
# Minimal dependencies approach
captrs = "0.3"  # Pure rust screenshot
device_query = "2.1"  # Cross-platform input

# Failed alternatives (too many native deps):
# screenshots = "0.8"  # needs libudev
# inputbot = "0.5"     # needs libudev
# scrap = { version = "0.5" }    # needs xcb/xdo
# enigo = "0.2"        # needs xcb/xdo

[build-dependencies]
pkg-config = "0.3"
